# nvidia-dgx-spark-lab

./: .ansible-lint  .bazelignore  .bazelrc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .yamllint.yml  AGENTS.md  BUILD.bazel  CONTRIBUTING.md  LICENSE  MODULE.bazel  Makefile  README.md  SECURITY.md  fix.sh  mkdocs.yml  mypy.ini  prettier.config.mjs  ruff.toml  versions.json
ansible/: BUILD.bazel  ansible.cfg  run_ansible_lint.sh  run_playbook.sh  run_syntax_check.sh
ansible/cloud-init/: example-user-data-1node.yaml  example-user-data-2node.yaml
ansible/files/: authelia-values.yaml  blackbox-exporter-values.yaml  coder-values.yaml  grafana-values.yaml  kube-state-metrics-values.yaml  node-exporter-values.yaml  open-webui-values.yaml  prometheus-values.yaml  traefik-values.yaml
ansible/inventory/: hosts.ini.example
ansible/inventory/group_vars/: all.yml
ansible/playbooks/: apply-cloud-init-prep.yml  bootstrap-cluster.yml  full-lab-setup.yml  install-dev-workspaces.yml  install-gpu-operator.yml  install-sso.yml  verify-cluster.yml
ansible/roles/: README.md
config/: BUILD.bazel  lab-domains.json  lab-domains.yaml  monitoring-probes.yaml  nemotron-catalog.yaml  open-webui-policy.json  open-webui-policy.yaml  resource-policy.json  resource-policy.yaml  sso-policy.yaml
config/grafana/: generate-dashboards.py
config/grafana/dashboards/: 00-lab-overview.json  01-dgx-nodes.json  02-gpu-cluster.json  03-kubernetes.json  04-inference.json  05-platform-services.json  06-dev-agent-stack.json  07-storage-network.json
dashboard/: .dockerignore  .env.example  AGENTS.md  BUILD.bazel  Dockerfile  Dockerfile.test  components.json  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  middleware.ts  package-lock.json  package.json  playwright.config.ts  run_npm.sh  tsconfig.json  tsconfig.typedoc.json  typedoc.json  vitest.config.ts  vitest.setup.ts
dashboard/__tests__/: middleware.test.ts
dashboard/actions/: host-actions.ts  preferences-actions.ts  secrets-actions.ts
dashboard/actions/__tests__/: host-actions.test.ts  preferences-actions.test.ts  secrets-actions.test.ts
dashboard/app/: globals.css  layout.tsx  themes.css
dashboard/app/(dashboard)/: error.tsx  layout.tsx  loading.tsx  page.tsx
dashboard/app/__tests__/: auth-route.test.ts  routes.test.tsx
dashboard/app/login/: error.tsx  page.tsx
dashboard/components/: CapacityGateDialog.tsx  DashboardShell.tsx  DevWorkspaceView.tsx  ErrorBoundary.tsx  HeavyConfirmDialog.tsx  InferencePanel.tsx  LoginForm.tsx  MachineStateClient.tsx  MachineStatePanel.tsx  NemotronStackPanel.tsx  ObservabilityPanel.tsx  OpenWebUIPanel.tsx  ResourcesPanel.tsx  SecretsPanel.tsx  StoragePanel.tsx  TasksContainerList.tsx  TasksPanel.tsx  ThemeProvider.tsx  ThemeSelector.tsx  Treemap.tsx  UtilitiesPanel.tsx  UtilityOutput.tsx  UtilityRow.tsx  UtilityRunHistory.tsx  WorkspaceEmbed.tsx  WorkspacesPanel.tsx  panel-styles.ts
dashboard/components/__tests__/: Badge.test.tsx  Button.test.tsx  Card.test.tsx  (+33 more)
dashboard/lib/: allowed-utilities.ts  auth-client.ts  auth.ts  env-guards.ts  format.ts  host.ts  path-security.ts  redirect.ts  require-session.ts  seed-admin.ts  storage-stats.ts  themes.ts  toast.ts  utils.ts  validation.ts
dashboard/scripts/: docker-entrypoint.sh  migrate.cjs  run-fast-tests.sh  run-hermetic-tests.sh  test-entrypoint.sh
docs/: BUILD.bazel  BUILDING_WITH_BAZEL.md  CONTRIBUTING.md  architecture.md  dev-environment.md  dev-workspaces.md  dgx-spark-notes.md  getting-started.md  gitea-ci-setup.md  glossary.md  hermes-agent.md  hooks.py  index.md  manage-docs.sh  mcp-agent-toolkit.md  models-catalog.md  monitoring-observability.md  nemotron-agentic-stack.md  open-webui.md  project-conventions.md  qwen36-dual-stack.md  reboot-safety.md  requirements.txt  resource-guard.md  setup-docs.sh  sso.md  test_command_vars.py  test_command_vars.sh  test_generate_shell_docs.py  test_generate_shell_docs.sh  test_hooks.py  test_mkdocs_build.sh  test_mkdocs_render.py  test_mkdocs_render.sh  test_mkdocs_visual.sh  test_python_coverage.sh  troubleshooting.md  visual-generative-ai.md
docs/includes/: abbreviations.md
helm/: BUILD.bazel  chart_test.sh
helm/lab-dashboard/: Chart.yaml  README.md  values.yaml
hermes/: BUILD.bazel  README.md  docker-compose.yaml
hermes/config/: SOUL.md.example  config.yaml.example  env.example  hermes-policy.json  hermes-policy.yaml
k8s/base/: BUILD.bazel  README.md  kustomization.yaml  namespace.yaml  namespaces-dev.yaml  namespaces-sso.yaml
k8s/dev/: BUILD.bazel
lints/: BUILD.bazel  buildifier_check.sh  run_kubeconform.sh  run_mypy.sh  run_prettier_yaml_check.sh  run_shellcheck.sh  run_yamllint.sh
mcp/: BUILD.bazel  README.md
mcp/config/: mcp-policy.json  mcp-policy.yaml  secrets.example.env
scripts/: BUILD.bazel  README.md  ci_check_only.sh  manage.completion.bash  manage.sh  validate.sh  yaml_format.sh
scripts/ci/: install-lint-tools.sh
scripts/lib/: check_tool.sh  common.sh  dev.sh  domains.sh  hermes.sh  mcp.sh  models.sh  monitoring.sh  open-webui.sh  paths.sh  rebuild-cleanup.sh  render_domains.py  resources.sh  secrets.sh  sso.sh  visual.sh  workspace-hermes.sh
scripts/utilities/: benchmark-qwen36.sh  build-mcp-images.sh  cluster-resources.sh  dev-workspaces.sh  download-flux.sh  download-glm52-gguf.sh  download-ltx.sh  download-qwen-models.sh  hermes-stack.sh  inference-workloads.sh  install-dev-tools.sh  kasm-workspace-image.sh  mcp-stack.sh  monitoring-stack.sh  nemotron-stack.sh  open-webui-stack.sh  rebuild-history.sh  render-domains.sh  runner.sh  spark-clock.sh  sync-hermes-seed.sh  sync-ollama-models.sh  system-update.sh  workspace-hermes.sh
tests/: BUILD.bazel  README.md  bats_runner.sh  doc_coverage.py  doc_coverage.sh  doc_coverage_unit.sh  kustomize_build.sh  manifest_coverage.py  manifest_coverage.sh  safety_invariants.sh  shell_coverage.sh  test_doc_coverage.py
tests/bats/: check_tool.bats  comfy_scripts.bats  devcontainer.bats  domains.bats  manage.bats  test_helper.bash  tooling.bats  utilities.bats  visual.bats
(+481 files in other folders)
